# synctx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md
contracts/: BindingAttestation.sol  Clones.sol  DealBase.sol  DealContractBase.sol  ERC1967Proxy.sol  ERC2771Mixin.sol  FeeCollector.sol  FeeFormat.sol  GasSponsorVault.sol  IDeal.sol  IDealContract.sol  IERC20.sol  IERC20Metadata.sol  IUSDC.sol  IVerifier.sol  IVerifierSpec.sol  IXQuoteVerifier.sol  Initializable.sol  MetaTxMixin.sol  SyncTxForwarder.sol  TwitterRegistry.sol  UUPSUpgradeable.sol  (+3 more)
examples/european-option-verifier/: SettlementPriceVerifier.sol  pyproject.toml
examples/european-option-verifier/service/: .env.example  chain.py  config.py  handlers.py  main.py  mcp_client.py  models.py  option_spec.py  settlement_price.py  signer.py
examples/european-option-verifier/tests/: test_settlement_price.py
examples/x-follow-verifier/: XFollowVerifier.sol  pyproject.toml
examples/x-follow-verifier/service/: chain.py  config.py  handlers.py  main.py  mcp_client.py  models.py  signer.py  verification.py  x_follow_spec.py
examples/x-follow-verifier/service/providers/: base.py  twitter_api.py  twitterapi_io.py
examples/x-follow-verifier/tests/: test_handlers.py
examples/x-quote-verifier/: XQuoteVerifier.sol  pyproject.toml
examples/x-quote-verifier/service/: .env.example  chain.py  config.py  handlers.py  main.py  mcp_client.py  models.py  requirements.txt  signer.py  verification.py  x_quote_spec.py
examples/x-quote-verifier/service/providers/: base.py  twitter_api.py  twitterapi_io.py
(+73 files in other folders)
